--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="collapse navbar-collapse float-right">
-          <ul id="menu-main-menu" class="navbar-nav">
+          <ul id="menu-main-menu" class="navbar-nav ml-auto">
             <li class="nav-item menu-item menu-academy">
               <a href="#" class="nav-link">Academy</a>
             </li>
@@ -64,7 +64,7 @@
               "
             >
               <a class="nav-link btn btn-warning" href="#">Download</a>
-              <i class="las la-download"></i>
+              <!-- <i class="las la-download"></i> -->
             </li>
           </ul>
         </div>
