--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             alt=""
           />
         </a>
-        <a class="brand d-none d-xl-block" href="#">Multilogin</a>
+        <a class="brand d-none d-xl-block" href="#">Antidetect</a>
         <div class="dropdown language-switcher">
           <a
             class="nav-link dropdown-toggle"
@@ -256,6 +256,15 @@
           </div>
         </div>
         <div class="screen-bg"></div>
+        <div class="frame-content">
+          <button>
+            <span>
+              <i class="las la-comment-alt"></i>
+            </span>
+            <span>Help</span>
+          </button>
+        </div>
+        <a href=""></a>
       </section>
       <!--End Screens-->
       <!--Start Compare-->
