--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
       </div>
     </footer>
     <!--End Footer-->
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js//main.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js//main.js"></script>
   </body>
 </html>
